--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,14 @@
             ],
             "styles": [
               "src/styles.css"
-            ],
-            "scripts": []
+                        
+             ],
+            "scripts": [
+
+              "node_modules/sweetalert2/dist/sweetalert2.min.js"
+              
+
+            ]
           },
           "configurations": {
             "production": {
@@ -87,12 +93,25 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+
+              "node_modules/primeicons/primeicons.css",
+               "node_modules/primeng/resources/primeng.min.css",
+                "node_modules/primeflex/primeflex.css"
             ],
-            "scripts": []
+            "scripts": [
+
+
+              "node_modules/sweetalert2/dist/sweetalert2.min.js"
+
+
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
